--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "eslint",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "seed": "tsx --env-file=.env.local lib/db/seed.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.2",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "openai": "^6.22.0",
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -39,7 +42,9 @@
     "eslint-config-next": "16.1.6",
     "jsdom": "^27.0.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
 }
